# malt

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.txt  Authors.md  CMakeLists.txt  ChangeLog.md  Doxyfile  FuncNameDic.cpp  README.md  SimpleCallStack.h  SimpleTracer.h  TODO.txt  configure  main.cpp  options  prepare.sh
extern-deps/: CMakeLists.txt
extern-deps/from-fftw/: cycle.h
extern-deps/from-htopml/: CMakeLists.txt  Readme.txt
extern-deps/from-http-lib/: README.md
extern-deps/from-nlohmann-json/: README.md
extern-deps/from-numaprof/: README.md  StaticAssoCache.hpp  StaticAssoCache_impl.hpp
extern-deps/gmock-1.7.0/: CMakeLists.txt
extern-deps/googletest-1.14.0/: CMakeLists.txt
extern-deps/iniparser/: CMakeLists.txt
extern-deps/jemalloc/: CMakeLists.txt  prepare.sh
extern-deps/renenyffenegger-base64/: CMakeLists.txt  base64.h
libreader/: CMakeLists.txt  Requests.cpp  Requests.h  WebProfile.cpp  WebProfile.hpp  main.cpp  main_http_lib.cpp  main_stream.cpp  main_zmq.cpp
libreader/api/: Profile.cpp  Requests.cpp  Requests.h  WebProfile.cpp
libreader/callgraph/: CallTreeAdapter.cpp  CallTreeAdapter.hpp  CppDeclParser.cpp  CppDeclParser.hpp  DotCode.cpp  FuncMetrics.cpp  GraphGenerator.cpp  GraphGenerator.hpp
libreader/extractors/: CallTreeAdapter.cpp  CallTreeAdapter.hpp  CppDeclParser.cpp  CppDeclParser.hpp  Extractor.cpp  Extractor.hpp  ExtractorHelpers.cpp  ExtractorHelpers.hpp  FuncMetrics.cpp  FuncMetrics.hpp  SimpleIdCache.cpp  SimpleIdCache.hpp
libreader/format/: Config.cpp  Config.hpp  Domains.cpp  Globals.hpp  Json.hpp  Leaks.cpp  MaltProfile.cpp  MemStats.cpp  Run.cpp  Scatter.cpp  Scatter.hpp  Sites.cpp  Stacks.cpp  Threads.cpp  Threads.hpp  Timeline.hpp  Types.cpp  Types.hpp
libreader/json/: File.cpp  File.hpp  Json.cpp  Json.hpp  Node.hpp  main.cpp
libreader/loader/: FileReader.cpp  FileReader.hpp
libreader/tests/: CMakeLists.txt  TestInstrum.cpp  TestInstrum.json  TestInstrumPython.cpp  TestInstrumPython.json  ref-c-basic-malloc.txt
src/: CMakeLists.txt  config.h.in  main.cpp  matt-format.md
src/common/: Array.h  Array.hpp  CMakeLists.txt  CodeTiming.cpp  CodeTiming.h  CodeTiming.hpp  Debug.cpp  Debug.h  Debug.hpp  FastBufferdStream.hpp  FormattedMessage.cpp  FormattedMessage.hpp  Helpers.cpp  Helpers.hpp  Options.cpp  Options.hpp  STLInternalAllocator.hpp  SimpleAllocator.cpp  SimpleAllocator.hpp  TakeLock.h  TakeLock.hpp
src/core/: AllocStackProfiler.cpp  AllocStackProfiler.hpp  AllocWrapper.cpp  BacktraceCallStack.cpp  BacktraceCallStack.hpp  CMakeLists.txt  CallStackInfo.cpp  CallStackInfo.hpp  EnterExitCallStack.cpp  EnterExitCallStack.h  EnterExitCallStack.hpp  FuncNameDic.cpp  FuncNameDic.hpp  LinuxProcMapReader.hpp  LocalAllocStackProfiler.cpp  LocalAllocStackProfiler.hpp  ProfiledValue.cpp  ProfiledValue.hpp  SegmentTracker.cpp  SegmentTracker.hpp  SimpleCallStackNode.cpp  SimpleCallStackNode.h  SimpleCallStackNode.hpp  SimpleStackTracer.cpp  SimpleStackTracer.h  SimpleStackTracer.hpp  Stack.cpp  Stack.h  StackSizeAnalyser.cpp  StackSizeAnalyser.hpp  StackSizeTracker.cpp  StackSizeTracker.hpp  SymbolResolver.cpp  SymbolResolver.hpp  ValgrindOutput.cpp  ValgrindOutput.hpp
src/doc/: bilbio.md  code_entry_points.md  common_functions.md  directories.md  file-format.md  portability.md  stack.md
src/integration/: CMakeLists.txt  MaltMPIRank.cpp  MattMPIRank.cpp  malt-passwd.sh.in  malt-python.sh.in  malt-python3.cpp  malt-webserver.sh.in  malt-webview.sh.in  malt.sh.in  matt-webserver.sh.in  matt.sh.in
src/json/: CMakeLists.txt  JsonState.cpp  TypeToJson.cpp  TypeToJson.h  TypeToJson_impl.h
src/lib/: AllocStackProfiler.cpp  AllocStackProfiler.h  AllocWrapper.cpp  BacktraceCallStack.cpp  BacktraceCallStack.h  CMakeLists.txt  CallStackInfo.cpp  CallStackInfo.h  EnterExitCallStack.cpp  EnterExitCallStack.h  FuncNameDic.cpp  FuncNameDic.h  SegmentTracker.cpp  SegmentTracker.h  SimpleCallStack.cpp  SimpleCallStack.h  SimpleCallStackNode.cpp  SimpleCallStackNode.h  SimpleStackTracer.cpp  SimpleStackTracer.h  SimpleTracer.cpp  SimpleTracer.h  Stack.cpp  Stack.h  config.h.in
src/libinstrum/: CMakeLists.txt  config.h.in
src/libreader/: CMakeLists.txt  main.cpp
src/libspec/: CMakeLists.txt
src/manpages/: CMakeLists.txt  Makefile  malt-passwd.1  malt-passwd.1.bz2  malt-passwd.1.html  malt-passwd.ronn  malt-python.1  malt-python.1.html  malt-python.ronn  malt-qt5.1.bz2  malt-qt5.1.html  malt-qt5.ronn  malt-webserver.1.bz2  malt-webserver.1.html  malt-webserver.ronn  malt-webview.1  malt-webview.1.bz2  malt-webview.1.html  malt-webview.ronn  malt.1  malt.1.bz2  malt.1.html  malt.ronn
src/maqao/: Readme.md  matt.mil
src/pintool/: Readme.md  makefile  makefile.rules  mallocprof.cpp
src/portability/: CMakeLists.txt  LockDummy.hpp  Mutex.h  Mutex.hpp  MutexDummy.hpp  MutexPthread.h  MutexPthread.hpp  OS.hpp  OSUnix.cpp  OSUnix.hpp
src/profile-reader/: CMakeLists.txt  JsonNode.cpp  JsonNode.hpp  JsonNodeLoader.cpp  JsonNodeLoader.hpp  JsonReader.cpp  JsonReader.hpp  ProfileReader.cpp  ProfileReader.hpp  README.md  main.cpp
src/qtview/: CMakeLists.txt  main.cpp
src/reader/: .gitignore  CMakeLists.txt
src/stack-tree/: CMakeLists.txt
src/stacks/: BacktraceStack.hpp  CMakeLists.txt  EnterExitStack.cpp
src/stackv2/: TreeStackTracer.hpp  TreeStackTracerEntry.hpp
src/stackv3/: TreeStackTracerEntryV3.hpp  TreeStackTracerV3.hpp
src/tests/: CMakeLists.txt  TestArray.cpp  TestFastBufferedStream.cpp  TestFormattedMessage.cpp  TestProfiledValue.cpp  TestSegmentTracker.cpp  TestSimpleAllocator.cpp  TestSimpleStackTracker.cpp  TestStack.cpp  TestStackTreeV2.cpp  TestStackTreeV3.cpp  TestValgrindOutput.cpp  benchmark.cpp  matt.ini  simple-case.cpp
src/trace-reader/: CMakeLists.txt  TraceReader.cpp  TraceReader.hpp  TraceReaderFragmentation.cpp  TraceReaderFragmentation.hpp  TraceReaderHisto.cpp  TraceReaderHisto.hpp  TraceReaderPrint.cpp  TraceReaderPrint.hpp  (+6 more)
webview-2-cpp/: CMakeLists.txt  main_webview.cpp
webview-2-python/: README.md  pyproject.toml
webview-2-rust/: CMakeLists.txt  Cargo.toml  build.rs
(+1719 files in other folders)
