############################################################
#    PROJECT  : MALT (MALoc Tracker)
#    VERSION  : 1.3.1
#    DATE     : 03/2015
#    LICENSE  : CeCILL-C
#    FILE     : extern-deps/from-htopml/CMakeLists.txt
#-----------------------------------------------------------
#    AUTHOR   : Sébastien Valat (ECR) - 2014
#    AUTHOR   : Sébastien Valat - 2015
############################################################

######################################################
add_subdirectory(json)