############################################################
#    PROJECT  : MALT (MALoc Tracker)
#    DATE     : 01/2014
#    LICENSE  : CeCILL-C
#    FILE     : extern-deps/from-htopml/CMakeLists.txt
#-----------------------------------------------------------
#    AUTHOR   : Sébastien Valat (ECR) - 2014
############################################################

######################################################
add_subdirectory(json)