############################################################
#    PROJECT  : MALT (MALoc Tracker)
#    VERSION  : 1.2.2
#    DATE     : 02/2014
#    LICENSE  : CeCILL-C
#    FILE     : extern-deps/iniparser/CMakeLists.txt
#-----------------------------------------------------------
#    AUTHOR   : Sébastien Valat (ECR) - 2014
############################################################
add_subdirectory(src)