############################################################
#    PROJECT  : MALT (MALoc Tracker)
#    DATE     : 02/2014
#    LICENSE  : CeCILL-C
#    FILE     : extern-deps/iniparser/CMakeLists.txt
#-----------------------------------------------------------
#    AUTHOR   : Sébastien Valat (ECR) - 2014
############################################################
add_subdirectory(src)